--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="page" id="home_page">
 <!-- Section 1 - Home page -->
         <section>
-            <img id="home" src="img/kea_restaurant.jpg" alt="KEA Restaurant">
+            <img id="home" src="img/kea_restaurant.jpg" alt="Image of KEA Restaurant">
             <p>
                 We provide a wide variety of fine dishes and beverages at moderate prices. Located in one of the 
                 trendiest areas of Copenhagen, Restaurant KEA has been at the forefront of Denmark's culinary life 
@@ -59,9 +59,7 @@
         </aside>
     </section>
 
-
-
-
+<!-- Section 3 - Food gallery -->
     <section class="page hidden" id="menu_page">
 <!-- Article 1 - Turing Salad -->
         <article class="dish">
@@ -129,7 +127,7 @@
         <address>
             <p>
                 Guldbergsgade 29N
-            </p><br>
+            </p>
             <p>
                 2200 Copenhagen
             </p>
